<resources>
    <string name="app_name">proll</string>
    <string name="registr">Регистрация</string>
    <string name="rec_passw">Восстановить пароль</string>
    <string name="sign_in">Войти</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="simstar">Simstar</string>
    <string name="enter_name_email">Введите ваше имя и электронную почту</string>
    <string name="name">Имя</string>
    <string name="email">Почта</string>
    <string name="enter_login_passw">Теперь придумайте Логин и пароль</string>
    <string name="create_acc">Зарегистрироваться</string>
    <string name="setting">Общие Настройки</string>
    <string name="lang">Язык</string>
    <string name="change">Изменить</string>
    <string name="notif">Уведомления</string>
    <string name="theme">Тема</string>
    <string name="sound">Звук</string>
    <string name="friend_online">Друзья (онлайн)</string>
    <string name="winrate">процент побед</string>
    <string name="num_game">Игр сыграно</string>
    <string name="join_to_code">Присоединиться по коду</string>
    <string name="Choose_room">Выберете комнату для игры</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>