<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Login">

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:background="@android:color/transparent"
        android:onClick="Return"
        android:scaleType="centerCrop"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.093"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.107"
        app:srcCompat="@drawable/retuurn" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="125dp"
        android:layout_height="44dp"
        android:layout_marginStart="143dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="143dp"
        android:layout_marginBottom="623dp"
        android:text="@string/simstar"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="97dp"
        android:layout_marginTop="133dp"
        android:layout_marginEnd="97dp"
        android:text="@string/registr"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="151dp"
        android:layout_marginTop="210dp"
        android:layout_marginBottom="370dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">


        <TextView
            android:id="@+id/textView4"
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:layout_weight="1"
            android:text="@string/enter_name_email"
            android:textSize="14sp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name"
            android:layout_width="307dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/rectangle"
            android:hint="@string/name"
            android:paddingLeft="25dp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="307dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@drawable/rectangle"
            android:hint="@string/email"
            android:paddingLeft="25dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="151dp"
        android:layout_marginTop="410dp"
        android:layout_marginBottom="233dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.333">


        <TextView
            android:id="@+id/textView5"
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:layout_weight="1"
            android:text="@string/enter_login_passw"
            android:textSize="14sp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login"
            android:layout_width="307dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/rectangle"
            android:hint="@string/login"
            android:paddingLeft="25dp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="307dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@drawable/rectangle"
            android:hint="@string/password"
            android:paddingLeft="25dp" />
    </LinearLayout>

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="112dp"
        android:layout_marginTop="622dp"
        android:layout_marginEnd="112dp"
        android:layout_marginBottom="61dp"
        android:backgroundTint="#D9D9D9"
        android:onClick="onMain"
        android:text="@string/create_acc"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>