<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Choose_room">

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:background="@android:color/transparent"
        android:onClick="Return"
        android:scaleType="centerCrop"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.093"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.107"
        app:srcCompat="@drawable/retuurn" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="125dp"
        android:layout_height="44dp"
        android:layout_marginStart="143dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="143dp"
        android:layout_marginBottom="623dp"
        android:text="@string/simstar"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Choose_room"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.193" />


    <Button
        android:id="@+id/join_to_code"
        android:layout_width="262dp"
        android:layout_height="65dp"
        android:layout_marginTop="610dp"
        android:layout_weight="0"
        android:backgroundTint="#D9D9D9"
        android:text="@string/join_to_code"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.365" />

    <ScrollView
        android:layout_width="334dp"
        android:layout_height="421dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="181dp"
        android:layout_marginEnd="34dp"

        android:layout_marginBottom="120dp"
        android:background="#D9D9D9"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="51dp"
                android:text="Комната 1"
                android:textSize="36sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="51dp"
                android:text="Комната 1"
                android:textSize="36sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="51dp"
                android:text="Комната 1"
                android:textSize="36sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="51dp"
                android:text="Комната 1"
                android:textSize="36sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="51dp"
                android:text="Комната 1"
                android:textSize="36sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="51dp"
                android:text="Комната 1"
                android:textSize="36sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="51dp"
                android:text="Комната 1"
                android:textSize="36sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="51dp"
                android:text="Комната 1"
                android:textSize="36sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="51dp"
                android:text="Комната 1"
                android:textSize="36sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="51dp"
                android:text="Комната 1"
                android:textSize="36sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="51dp"
                android:text="Комната 1"
                android:textSize="36sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="51dp"
                android:text="Комната 1"
                android:textSize="36sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="51dp"
                android:text="Комната 1"
                android:textSize="36sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="51dp"
                android:text="Комната 1"
                android:textSize="36sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="hint" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>