<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Mainscreen">
    <!-- Основной контент -->
    <!-- Выдвижная панель -->

    <FrameLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="125dp"
            android:layout_height="44dp"
            android:layout_marginStart="132dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="132dp"
            android:layout_marginBottom="618dp"
            android:text="@string/simstar"
            android:textSize="36sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="343dp"
            android:layout_marginTop="160dp"
            android:layout_marginBottom="306dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <ImageView
                android:id="@+id/avatar"
                android:layout_width="171dp"
                android:layout_height="171dp"
                android:background="@drawable/circle"
                android:clipToOutline="true"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/ic_launcher_background" />

            <TextView
                android:id="@+id/login"
                android:layout_width="290dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:hint="Login"
                android:text="Login"
                android:textSize="24sp" />

            <TableLayout
                android:layout_width="311dp"
                android:layout_height="44dp"
                android:layout_marginTop="10dp"
                android:background="#D9D9D9">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:gravity="center">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/friend"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:background="@drawable/circle"
                            android:clipToOutline="true"
                            app:srcCompat="@drawable/ic_launcher_background" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginStart="3dp"
                            android:layout_marginEnd="10dp"
                            android:hint="0 (0)"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/winr"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:background="@drawable/circle"
                            android:clipToOutline="true"
                            app:srcCompat="@drawable/ic_launcher_background" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:hint="0%"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/game"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:background="@drawable/circle"
                            android:clipToOutline="true"
                            app:srcCompat="@drawable/ic_launcher_background" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginStart="10dp"
                            android:hint="0"
                            android:textSize="16sp" />
                    </LinearLayout>

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="4dp"
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="3dp"
                        android:gravity="center"
                        android:text="@string/friend_online"
                        android:textColor="#676060"
                        android:textSize="9sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="10dp"
                        android:gravity="center"
                        android:text="@string/winrate"
                        android:textColor="#676060"
                        android:textSize="9sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="10dp"
                        android:gravity="center"
                        android:text="@string/num_game"
                        android:textColor="#676060"
                        android:textSize="9sp" />
                </TableRow>
            </TableLayout>

        </LinearLayout>

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="112dp"
            android:layout_marginTop="590dp"
            android:layout_marginEnd="85dp"
            android:layout_marginBottom="0dp"
            android:backgroundTint="#D9D9D9"
            android:gravity="center"
            android:onClick="OnFrafActiv"
            android:text="Создать комнату"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="112dp"
            android:layout_marginTop="515dp"
            android:layout_marginEnd="89dp"
            android:backgroundTint="#D9D9D9"
            android:gravity="center"
            android:onClick="ChooseRoom"
            android:text="Присоединиться"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </FrameLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/drawer_menu" />
</androidx.drawerlayout.widget.DrawerLayout>